--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,8 +1,10 @@
+version: 2
+updates:
 - package-ecosystem: "npm"
   directory: "/"
   schedule:
-    interval: "weekly"
+    interval: "daily"
 - package-ecosystem: "github-actions"
   directory: "/"
   schedule:
-    interval: "weekly"
+    interval: "daily"
