--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -29,7 +29,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
       with:
-        branch: master
+        branch: main
         dry_run: true
 
     - name: Count number or releases for tag
