--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "javascript-action",
+  "name": "ydataai-update-notion-page",
   "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "description": "Update Notion Page",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
@@ -11,19 +11,21 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/ydataai/update-notion-page.git"
   },
   "keywords": [
+    "YData",
+    "Notion",
     "GitHub",
     "Actions",
     "JavaScript"
   ],
-  "author": "",
+  "author": "YData",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/ydataai/update-notion-page/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/ydataai/update-notion-page#readme",
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@notionhq/client": "^2.2.2"
