--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
-  "name": "javascript-action",
-  "version": "1.0.0",
-  "description": "JavaScript Action Template",
+  "name": "ydataai-update-notion-page",
+  "description": "Update Notion Page",
   "main": "index.js",
   "scripts": {
     "lint": "eslint .",
     "prepare": "ncc build index.js -o dist --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run lint && npm run prepare && npm run test"
+    "all": "npm run lint && npm run prepare"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/javascript-action.git"
+    "url": "git+https://github.com/ydataai/update-notion-page.git"
   },
   "keywords": [
+    "YData",
+    "Notion",
     "GitHub",
     "Actions",
     "JavaScript"
   ],
-  "author": "",
+  "author": "YData",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/actions/javascript-action/issues"
+    "url": "https://github.com/ydataai/update-notion-page/issues"
   },
-  "homepage": "https://github.com/actions/javascript-action#readme",
+  "homepage": "https://github.com/ydataai/update-notion-page#readme",
   "dependencies": {
-    "@actions/core": "^1.10.0"
+    "@actions/core": "^1.10.0",
+    "@notionhq/client": "^2.2.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.34.0",
