chore(actions): update artifacts retention policy

--- a/.github/workflows/check-dist.yml
+++ b/.github/workflows/check-dist.yml
@@ -47,5 +47,6 @@ jobs:
       - uses: actions/upload-artifact@v3
         if: ${{ failure() && steps.diff.conclusion == 'failure' }}
         with:
+          retention-days: 1
           name: dist
           path: dist/
