--- a/.github/workflows/merge-main.yml
+++ b/.github/workflows/merge-main.yml
@@ -34,11 +34,11 @@ jobs:
 
     - name: Count number or releases for tag
       id: build_number
-      run: echo "::set-output name=value::$(($(git tag | grep -c ${{ steps.semantic.outputs.new_release_version }}.rc) + 1))"
+      run: echo "value=$(($(git tag | grep -c ${{ steps.semantic.outputs.new_release_version }}.rc) + 1))" >> $GITHUB_OUTPUT
 
     - name: Compute version
       id: version
-      run: echo "::set-output name=value::${{ steps.semantic.outputs.new_release_version }}.rc${{ steps.build_number.outputs.value }}"
+      run: echo "value=${{ steps.semantic.outputs.new_release_version }}.rc${{ steps.build_number.outputs.value }}" >> $GITHUB_OUTPUT
 
   prerelease-tag:
     if: needs.prepare.outputs.new_release == 'true'
@@ -50,12 +50,11 @@ jobs:
     - prepare
 
     steps:
-    - uses: simpleactions/create-tag@v1.0.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+    - uses: ydataai/create-tag@v1.0.0
       with:
         tag: ${{ needs.prepare.outputs.version }}
         message: ${{  github.event.head_commit.message }}
+        github_token: ${{ secrets.ACCESS_TOKEN }}
 
   draft-release:
     if: needs.prepare.outputs.new_release == 'true'
